update config html

--- a/web/templates/server_config.html
+++ b/web/templates/server_config.html
@@ -306,10 +306,10 @@
                                     Http URL
                                 </th>
                                 <th>
-                                    Cloud Server
+                                    一层转发
                                 </th>
                                 <th>
-                                    Forward Server(Ha/Nginx)
+                                    二层转发
                                 </th>
                                 <th>
                                     App Instance
