--- a/web/templates/server_config.html
+++ b/web/templates/server_config.html
@@ -312,7 +312,7 @@
                                     二层转发
                                 </th>
                                 <th>
-                                    App Instance
+                                    应用实例（Docker）
                                 </th>
                             </tr>
                             {% for group_obj in response.data.groups.all %}
